# gazelle:prefix istio.io/test-infra
# gazelle:proto disable_global

load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@bazel_gazelle//:def.bzl", "gazelle")

buildifier(
    name = "buildifier",
)

gazelle(
    name = "gazelle",
    command = "fix",
    external = "vendored",
)
