# gazelle:prefix istio.io/test-infra
# gazelle:proto disable_global

load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@bazel_gazelle//:def.bzl", "gazelle")

buildifier(
    name = "buildifier",
)

gazelle(
    name = "gazelle",
    command = "fix",
    external = "vendored",
)

platform(
    name = "rbe_with_network",
    parents = ["@rbe_default//config:platform"],
    remote_execution_properties = """
      properties: {
        name: "dockerNetwork"
        value: "standard"
      }
      {PARENT_REMOTE_EXECUTION_PROPERTIES}
    """,
)
