# gazelle:prefix istio.io/test-infra
# gazelle:proto disable_global

load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@bazel_gazelle//:def.bzl", "gazelle")

buildifier(
    name = "buildifier",
)

gazelle(
    name = "gazelle",
    command = "fix",
    external = "vendored",
)

platform(
    name = "rbe_with_network",
    parents = ["@rbe_default//config:platform"],
    remote_execution_properties = """
      properties: {
        name: "dockerNetwork"
        value: "standard"
      }
      {PARENT_REMOTE_EXECUTION_PROPERTIES}
    """,
)

filegroup(
    name = "package-srcs",
    srcs = glob(
        ["**"],
        exclude = [
            "bazel-*/**",
            ".git/**",
        ],
    ),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//authentikos:all-srcs",
        "//boskos:all-srcs",
        "//prow:all-srcs",
        "//toolbox/branch_pr:all-srcs",
        "//toolbox/ci2gubernator:all-srcs",
        "//toolbox/deps_update:all-srcs",
        "//toolbox/errorfinder:all-srcs",
        "//toolbox/fixit:all-srcs",
        "//toolbox/githubctl:all-srcs",
        "//toolbox/metrics:all-srcs",
        "//toolbox/release_note_collector:all-srcs",
        "//toolbox/timecomparer:all-srcs",
        "//toolbox/util:all-srcs",
        "//tools/github_helper:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
