package(default_visibility = ["//visibility:public"])

filegroup(
    name = "testdata",
    srcs = [
        "resources.yaml",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//boskos/cmd/mason:all-srcs",
        "//boskos/cmd/mason_client:all-srcs",
        "//boskos/gcp:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
