load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "configs",
    srcs = [
        "config.yaml",
        "plugins.yaml",
    ],
)

go_library(
    name = "go_default_library",
    srcs = ["rewriteConfig.go"],
    importpath = "istio.io/test-infra/prow",
)

go_binary(
    name = "prow",
    embed = [":go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["rewriteConfig_test.go"],
    embed = [":go_default_library"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)
