load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "alert.go",
        "branchProtector.go",
        "prowAccessor.go",
        "sisyphusd.go",
        "storage.go",
    ],
    importpath = "istio.io/test-infra/sisyphus",
    visibility = ["//visibility:public"],
    deps = [
        "//toolbox/util:go_default_library",
        "@com_github_google_go_github//github:go_default_library",
    ],
)

go_test(
    name = "prowAccessor_test",
    srcs = ["prowAccessor_test.go"],
    embed = [":go_default_library"],
    importpath = "istio.io/test-infra/sisyphus",
)

go_test(
    name = "sisyphusd_test",
    srcs = ["sisyphusd_test.go"],
    data = ["//sisyphus/test_data:testdata"],
    embed = [":go_default_library"],
    importpath = "istio.io/test-infra/sisyphus",
)
