load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "gce.go",
        "gcloud.go",
        "gke.go",
    ],
    importpath = "istio.io/test-infra/boskos/gcp",
    visibility = ["//visibility:public"],
    deps = [
        "//toolbox/util:go_default_library",
        "@com_github_ghodss_yaml//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
        "@io_k8s_client_go//tools/clientcmd/api/v1:go_default_library",
        "@io_k8s_test_infra//boskos/common:go_default_library",
        "@io_k8s_test_infra//boskos/mason:go_default_library",
        "@org_golang_google_api//compute/v1:go_default_library",
        "@org_golang_google_api//container/v1beta1:go_default_library",
        "@org_golang_google_api//option:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["config_test.go"],
    data = [
        "test-configs.yaml",
        "//boskos:testdata",
    ],
    embed = [":go_default_library"],
    importpath = "istio.io/test-infra/boskos/gcp",
    deps = [
        "@io_k8s_test_infra//boskos/common:go_default_library",
        "@io_k8s_test_infra//boskos/mason:go_default_library",
        "@org_golang_google_api//container/v1beta1:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
