load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "gce.go",
        "gcloud.go",
        "gke.go",
    ],
    importpath = "istio.io/test-infra/boskos/gcp",
    visibility = ["//visibility:public"],
    deps = [
        "//toolbox/util:go_default_library",
        "//vendor/github.com/ghodss/yaml:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/golang.org/x/sync/errgroup:go_default_library",
        "//vendor/google.golang.org/api/compute/v1:go_default_library",
        "//vendor/google.golang.org/api/container/v1beta1:go_default_library",
        "//vendor/google.golang.org/api/option:go_default_library",
        "//vendor/gopkg.in/yaml.v2:go_default_library",
        "//vendor/k8s.io/client-go/tools/clientcmd/api/v1:go_default_library",
        "//vendor/sigs.k8s.io/boskos/common:go_default_library",
        "//vendor/sigs.k8s.io/boskos/mason:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["config_test.go"],
    data = [
        "test-configs.yaml",
        "//boskos:testdata",
    ],
    embed = [":go_default_library"],
    importpath = "istio.io/test-infra/boskos/gcp",
    deps = [
        "//vendor/google.golang.org/api/container/v1beta1:go_default_library",
        "//vendor/sigs.k8s.io/boskos/common:go_default_library",
        "//vendor/sigs.k8s.io/boskos/mason:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
