load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

filegroup(
    name = "testdata",
    srcs = glob(["testdata/*.yaml"]),
)

go_test(
    name = "go_default_test",
    srcs = [
        "config_test.go",
        "generate_test.go",
    ],
    data = [
        "//prow:configs",
        "//prow/cluster:configs",
        "testdata",
    ],
    embed = [":go_default_library"],
    importpath = "istio.io/test-infra/prow/config",
    deps = [
        "//vendor/k8s.io/apimachinery/pkg/util/sets:go_default_library",
        "//vendor/k8s.io/test-infra/prow/config:go_default_library",
        "//vendor/k8s.io/test-infra/prow/hook:go_default_library",
        "//vendor/k8s.io/test-infra/prow/plugins:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    srcs = ["generate.go"],
    importpath = "istio.io/test-infra/prow/config",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/ghodss/yaml:go_default_library",
        "//vendor/github.com/hashicorp/go-multierror:go_default_library",
        "//vendor/github.com/kr/pretty:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/test-infra/prow/apis/prowjobs/v1:go_default_library",
        "//vendor/k8s.io/test-infra/prow/config:go_default_library",
    ],
)
