load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

filegroup(
    name = "testdata",
    srcs = glob(["testdata/*.yaml"]),
)

go_test(
    name = "go_default_test",
    srcs = [
        "config_test.go",
        "generate_test.go",
    ],
    data = [
        "testdata",
        "//prow:configs",
        "//prow/cluster:configs",
    ],
    embed = [":go_default_library"],
    importpath = "istio.io/test-infra/prow/config",
    deps = [
        "@io_k8s_apimachinery//pkg/util/sets:go_default_library",
        "@io_k8s_test_infra//prow/config:go_default_library",
        "@io_k8s_test_infra//prow/hook:go_default_library",
        "@io_k8s_test_infra//prow/plugins:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    srcs = ["generate.go"],
    importpath = "istio.io/test-infra/prow/config",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_ghodss_yaml//:go_default_library",
        "@com_github_hashicorp_go_multierror//:go_default_library",
        "@com_github_kr_pretty//:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/api/resource:go_default_library",
        "@io_k8s_test_infra//prow/apis/prowjobs/v1:go_default_library",
        "@io_k8s_test_infra//prow/config:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//prow/config/cmd:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
