load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "go_default_test",
    srcs = ["config_test.go"],
    deps = [
        "//vendor/k8s.io/apimachinery/pkg/util/sets:go_default_library",
        "//vendor/k8s.io/test-infra/prow/config:go_default_library",
        "//vendor/k8s.io/test-infra/prow/hook:go_default_library",
    ],
)
