load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//docker:docker.bzl", "docker_build")

go_library(
    name = "sisyphus_main",
    srcs = [
        "main.go",
    ],
    importpath = "istio.io/test-infra/sisyphus/istio_deployment",
    visibility = ["//visibility:private"],
    deps = [
        "//sisyphus:go_default_library",
        "//toolbox/util:go_default_library",
    ],
)

go_binary(
    name = "sisyphus_static",
    embed = [":sisyphus_main"],
    gc_linkopts = [
        "-linkmode",
        "external",
        "-extldflags",
        "-static",
    ],
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

docker_build(
    name = "sisyphus_image",
    base = "@distroless//image:image.tar",
    cmd = ["./sisyphus_static"],
    files = [":sisyphus_static"],
    tags = ["manual"],
)

go_binary(
    name = "sisyphus",
    embed = [":sisyphus_main"],
    importpath = "istio.io/test-infra/sisyphus/istio_deployment",
    visibility = ["//visibility:public"],
)
