load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "istio.io/test-infra/sisyphus/istio_deployment",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/istio.io/test-infra/sisyphus:go_default_library",
        "//vendor/istio.io/test-infra/toolbox/util:go_default_library",
    ],
)

go_binary(
    name = "istio_deployment",
    embed = [":go_default_library"],
    importpath = "istio.io/test-infra/sisyphus/istio_deployment",
    visibility = ["//visibility:public"],
)
