load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "istio.io/test-infra/toolbox/fixit",
    visibility = ["//visibility:private"],
    deps = ["//toolbox/util:go_default_library"],
)

go_binary(
    name = "branch_pr",
    embed = [":go_default_library"],
    importpath = "istio.io/test-infra/toolbox/branch_pr",
    visibility = ["//visibility:public"],
)
