load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "istio.io/test-infra/toolbox/fixit",
    visibility = ["//visibility:private"],
    deps = ["//toolbox/util:go_default_library"],
)

go_binary(
    name = "fixit_metric",
    embed = [":go_default_library"],
    importpath = "istio.io/test-infra/toolbox/fixit",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "fixit",
    embed = [":go_default_library"],
    importpath = "istio.io/test-infra/toolbox/fixit",
    visibility = ["//visibility:public"],
)
