load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "istio.io/test-infra/toolbox/githubctl",
    visibility = ["//visibility:private"],
    deps = [
        "//sisyphus:go_default_library",
        "//toolbox/util:go_default_library",
    ],
)

go_binary(
    name = "githubctl",
    embed = [":go_default_library"],
    importpath = "istio.io/test-infra/toolbox/githubctl",
    visibility = ["//visibility:public"],
)
