load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["metrics.go"],
    importpath = "istio.io/test-infra/toolbox/metrics",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
        "//vendor/golang.org/x/net/context:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["metrics_test.go"],
    embed = [":go_default_library"],
    importpath = "istio.io/test-infra/toolbox/metrics",
    deps = ["//vendor/github.com/prometheus/client_golang/prometheus:go_default_library"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//toolbox/metrics/buildfreshness:all-srcs",
        "//toolbox/metrics/cmd:all-srcs",
        "//toolbox/metrics/coverage:all-srcs",
        "//toolbox/metrics/flakes:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
