load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//docker:docker.bzl", "docker_build")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
    ],
    importpath = "istio.io/test-infra/toolbox/oncall_alert",
    visibility = ["//visibility:private"],
    deps = [
        "@com_google_cloud_go//storage:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_binary(
    name = "oncall_alert_static",
    gc_linkopts = [
        "-linkmode",
        "external",
        "-extldflags",
        "-static",
    ],
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)

docker_build(
    name = "oncall_alert_image",
    base = "@distroless//image:image.tar",
    cmd = ["./oncall_alert_static"],
    files = [":oncall_alert_static"],
)

go_binary(
    name = "oncall_alert",
    importpath = "istio.io/test-infra/toolbox/oncall_alert",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)