load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "istio.io/test-infra/toolbox/pkg_check",
    visibility = ["//visibility:private"],
    deps = [
        "@com_google_cloud_go//storage:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_binary(
    name = "pkg_check",
    importpath = "istio.io/test-infra/toolbox/pkg_check",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    importpath = "istio.io/test-infra/toolbox/pkg_check",
    library = ":go_default_library",
)
