load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "istio.io/test-infra/toolbox/pkg_check",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/cloud.google.com/go/storage:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/golang.org/x/net/context:go_default_library",
    ],
)

go_binary(
    name = "pkg_check",
    embed = [":go_default_library"],
    importpath = "istio.io/test-infra/toolbox/pkg_check",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
    importpath = "istio.io/test-infra/toolbox/pkg_check",
)
