load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "istio.io/test-infra/toolbox/release_note_collector",
    visibility = ["//visibility:private"],
    deps = [
        "//toolbox/util:go_default_library",
        "//vendor/github.com/google/go-github/github:go_default_library",
    ],
)

go_binary(
    name = "release_note_collector",
    embed = [":go_default_library"],
    importpath = "istio.io/test-infra/toolbox/release_note_collector",
    visibility = ["//visibility:public"],
)
