load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "commonUtils.go",
        "dependency.go",
        "githubClient.go",
        "githubUtils.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/google/go-github/github:go_default_library",
        "//vendor/github.com/hashicorp/go-multierror:go_default_library",
        "//vendor/golang.org/x/oauth2:go_default_library",
    ],
)
