load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "commonUtils.go",
        "dependency.go",
        "gcsClient.go",
        "githubClient.go",
        "githubUtils.go",
    ],
    importpath = "istio.io/test-infra/toolbox/util",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_glog//:go_default_library",
        "@com_github_google_go_github//github:go_default_library",
        "@com_github_hashicorp_go_multierror//:go_default_library",
        "@com_google_cloud_go//storage:go_default_library",
        "@org_golang_google_api//iterator:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
    ],
)
