load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "istio.io/test-infra/tools/generate-transform-jobs",
    visibility = ["//visibility:private"],
    deps = ["//tools/prowtrans/pkg/configuration:go_default_library"],
)

go_binary(
    name = "generate-transform-jobs",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
)
