load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "istio.io/test-infra/tools/github_helper",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/github.com/google/go-github/github:go_default_library",
        "//vendor/golang.org/x/oauth2:go_default_library",
        "//vendor/istio.io/test-infra/toolbox/util:go_default_library",
    ],
)

go_binary(
    name = "github_helper",
    embed = [":go_default_library"],
    importpath = "istio.io/test-infra/tools/github_helper",
    visibility = ["//visibility:public"],
)
